2024-04-09 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 3.12.3, SECURITY_PATCH++, (CVE-2023-52425)

2024-04-03 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 3.11.9

2024-03-20 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 3.10.14/3.9.19/3.8.19, SECURITY_PATCH++,
	  (CVE-2023-52425, CVE-2024-0450, CVE-2023-6597)

2024-02-07 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 3.12.2/3.11.8

2023-01-14 Remko van der Vossen <wich@sourcemage.org>
	* DEPENDS: needs at least gcc 4.9.0

2023-12-17 Remko van der Vossen <wich@sourcemage.org>
	* DEPENDS, BUILD: optional depends libxcrypt

2023-12-08 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 3.12.1

2023-12-04 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 3.11.7

2023-11-13 Thomas Orgis <sobukus@sourcemage.org>
	* CONFIGURE: drop warning about py3 default

2023-11-04 Pavel Vinogradov <public@sourcemage.org>
	* patches-3.12/0001-Fix-build-against-LibreSSL.patch: updated to build hashlib
	  module with LibreSSL

2023-10-16 Thomas Orgis <sobukus@sourcemage.org>
	* UP_TRIGGERS: fix for upgrades from 3.10 on

2023-10-02 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS, PREPARE, patches-3.11/*: versions 3.12.0/3.11.6
	* python.gpg: added new key, A821E680E5FA6305, Thomas Wouters <thomas@xs4all.nl>

2023-08-24 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 3.11.5/3.10.13/3.9.18/3.8.18, SECURITY_PATCH++,
	  (CVE-2023-40217)

2023-06-07 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 3.11.4, 3.10.12, 3.9.17, 3.8.17, 3.7.17, SECURITY_PATCH++

2023-04-05 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 3.11.3, 3.10.11

2023-03-27 Ismael Luceno <ismael@sourcemage.org>
	* DETAILS: marked 3.11.x as stable

2023-02-08 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: versions 3.11.2, 3.10.10, switched back to gpg checking for 3.11

2022-12-06 Pavel Vinogradov <public@sourcemage.org>