@@ -2,9 +2,11 @@
 case "$PYTHON3_BRANCH" in
    devel| \
     3.12)
+      PATCHLEVEL=1
          VERSION=3.12.3 ;;
   stable| \
     3.11)
+      PATCHLEVEL=1
          VERSION=3.11.9 ;;
     3.10)
          VERSION=3.10.14 ;;
