@@ -5,11 +5,15 @@ Date: Thu, 15 Sep 2022 22:10:54 +0200
 
 Based on patches from OpenBSD.
 
+Origin: OpenBSD
 Upstream-Status: Inappropriate
-Signed-off-by: Ismael Luceno <ismael@iodev.co.uk>
+Signed-off-by: Ismael Luceno <ismael@sourcemage.org>
+
 ---
- Modules/_hashopenssl.c |    8 ++++++++
- 1 file changed, 8 insertions(+)
+ Modules/_hashopenssl.c |    9 ++++++++-
+ Modules/_ssl.c         |   10 +++++++++-
+ configure              |    2 ++
+ 3 files changed, 19 insertions(+), 2 deletions(-)
 
 --- a/Modules/_hashopenssl.c
 +++ b/Modules/_hashopenssl.c
@@ -82,6 +86,15 @@ Signed-off-by: Ismael Luceno <ismael@iodev.co.uk>
  
  static PyObject *
  get_security_level(PySSLContext *self, void *c)
+@@ -4541,7 +4541,7 @@ set_sni_callback(PySSLContext *self, PyObject *arg, vo
+     return 0;
+ }
+ 
+-#if OPENSSL_VERSION_NUMBER < 0x30300000L
++#if OPENSSL_VERSION_NUMBER < 0x30300000L && !defined(LIBRESSL_VERSION_NUMBER)
+ static X509_OBJECT *x509_object_dup(const X509_OBJECT *obj)
+ {
+     int ok;
 diff --git a/configure b/configure
 index b6f90bc..c71b68a 100755
 --- a/configure
