@@ -1,3 +1,9 @@
+2024-05-09 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: PATCHLEVEL++ [3.11, 3.12]
+	* patches-3.11/0001-Fix-build-against-LibreSSL.patch,
+	  patches-3.12/0001-Fix-build-against-LibreSSL.patch:
+	  updated for 3.11.9, and 3.12.3 respectively.
+
 2024-04-09 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: version 3.12.3, SECURITY_PATCH++, (CVE-2023-52425)
 
